--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
     "48": "/icons/icon48.png",
     "192": "/icons/icon192.png"
   },
-  "permissions": ["webNavigation", "scripting", "activeTab", "fileSystem", "fileSystem.write", "fileSystem.directory"],
+  "permissions": ["webNavigation", "scripting", "activeTab"],
   "background": {
     "service_worker": "background.js"
   },
